<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup_page"
    tools:context=".LoginSignup.signup">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.748">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account_text"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dfaufj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_5sdp"
                android:text="@string/email_text"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/enter_email"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_below="@+id/dfaufj"
                android:layout_gravity="center"
                android:background="@drawable/edittext_box"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dfaufj21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_5sdp"
                android:text="@string/password_text"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/enter_pass"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_below="@+id/dfaufj21"
                android:layout_gravity="center"
                android:background="@drawable/edittext_box"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dfaufj24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_5sdp"
                android:text="@string/confirm_password_text"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/enter_confirm_pass"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_below="@+id/dfaufj24"
                android:layout_gravity="center"
                android:background="@drawable/edittext_box"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_5sdp"
                android:password="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />
        </RelativeLayout>

        <Button
            android:id="@+id/create_acc_with_emailPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/login_btn"
            android:text="@string/create_account_btn" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5sdp"
                android:text="@string/sign_up_with_text"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/create_acc_with_google"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/google_32px" />

                <ImageView
                    android:id="@+id/create_acc_with_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:src="@drawable/telephone" />


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <TextView
                android:id="@+id/alreadyHaveAccWithEmailPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account_text"
                android:textColor="@color/black" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>