<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup_page"
    tools:context=".LoginSignup.forgetPass_with_email">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.523">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_your_password_text"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dfaufj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_5sdp"
                android:text="@string/email_text"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/get_forget_email"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_below="@+id/dfaufj"
                android:layout_gravity="center"
                android:background="@drawable/edittext_box"
                android:paddingLeft="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />
        </RelativeLayout>

        <Button
            android:id="@+id/forget_pass_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/login_btn"
            android:text="@string/forget_text" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>