<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainScreen.TapOnItem">

    <LinearLayout
        android:id="@+id/HJDHIUJ"
        android:background="@color/purple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:elevation="@dimen/_20sdp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/item_click_back_btn"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:src="@drawable/back_64px"
            app:tint="@color/white" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/HJDHIUJ"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/item_click_recyclerview"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/_2sdp"
                android:layout_height="@dimen/_200sdp"
                android:orientation="horizontal"
                android:background="@color/OffWhite"
                app:stackFromEnd="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_8sdp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_8sdp"
                android:text="@string/title"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/item_click_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"
                android:layout_marginLeft="@dimen/_8sdp"
                android:paddingLeft="@dimen/_8sdp"
                android:paddingRight="@dimen/_8sdp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_8sdp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_8sdp"
                android:text="@string/description"
                android:textColor="@color/black"/>


            <TextView
                android:id="@+id/item_click_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"
                android:layout_marginLeft="@dimen/_8sdp"
                android:paddingLeft="@dimen/_8sdp"
                android:paddingRight="@dimen/_8sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_8sdp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_8sdp"
                android:text="@string/location"
                android:textColor="@color/black"/>


            <TextView
                android:id="@+id/item_click_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:paddingRight="@dimen/_8sdp"
                android:textColor="@color/black"
                android:layout_marginRight="@dimen/_2sdp"
                android:layout_marginLeft="@dimen/_8sdp"
                android:paddingLeft="@dimen/_8sdp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_8sdp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_8sdp"
                android:text="@string/date"
                android:textColor="@color/black"/>


            <TextView
                android:id="@+id/item_click_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:paddingRight="@dimen/_8sdp"
                android:textColor="@color/black"
                android:layout_marginRight="@dimen/_2sdp"
                android:layout_marginLeft="@dimen/_8sdp"
                android:paddingLeft="@dimen/_8sdp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_8sdp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_8sdp"
                android:text="@string/owner_s_details"
                android:textColor="@color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/item_click_user_profile"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    app:civ_border_color="@color/black"
                    app:civ_border_width="@dimen/_2sdp"/>

                <TextView
                    android:id="@+id/item_click_userName"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <TextView
                android:id="@+id/show_more_posts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_gravity="center_horizontal"
                android:text="@string/show_more_text"
                android:textColor="@color/black"/>

            <androidx.recyclerview.widget.RecyclerView
                android:visibility="gone"
                android:id="@+id/item_click_more_recyclerview"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/per_items_ms"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/item_click_contact_btn"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/login_btn"
        android:text="@string/contact_request" />

    <Button
        android:id="@+id/item_click_chat_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/login_btn"
        android:text="@string/chat_for_more"/>
</RelativeLayout>
