<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".PostManagement.postUpload">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/post_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/_2sdp"
            android:orientation="horizontal"
            app:stackFromEnd="true" />


        <RelativeLayout
            android:id="@+id/HJDUJ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/post_recyclerview"
            android:layout_margin="@dimen/_5sdp">

            <TextView
                android:id="@+id/OJIJ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:text="@string/enter_work_title_text"
                android:textColor="@color/black"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/enter_work_titile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/OJIJ"
                android:backgroundTint="@color/black"
                android:maxLength="200"
                android:maxLines="3"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <TextView
                android:id="@+id/title_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/enter_work_titile"
                android:layout_alignEnd="@+id/enter_work_titile"
                android:text="@string/max_size_200_words"
                android:textColor="@color/black"
                android:textSize="@dimen/_8sdp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/IOEKJEI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/HJDUJ"
            android:layout_margin="@dimen/_5sdp">

            <TextView
                android:id="@+id/OJIJPD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:text="@string/enter_work_description_text"
                android:textColor="@color/black"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/enter_work_des"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/OJIJPD"
                android:backgroundTint="@color/black"
                android:maxLength="500"
                android:maxLines="8"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />


            <TextView
                android:id="@+id/description_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/enter_work_des"
                android:layout_alignEnd="@+id/enter_work_des"
                android:text="@string/max_size_500_words"
                android:textColor="@color/black"
                android:textSize="@dimen/_8sdp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/KJIOJKKJ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/IOEKJEI"
            android:layout_margin="@dimen/_5sdp">

            <TextView
                android:id="@+id/EFEF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:text="@string/select_location_state"
                android:textColor="@color/black"
                android:textStyle="bold" />


            <Spinner
                android:id="@+id/enter_work_location"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_below="@+id/EFEF"
                android:backgroundTint="@color/black"
                android:maxLength="200"
                android:maxLines="3"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/KJIOJKKJ"
            android:layout_margin="@dimen/_5sdp">

            <TextView
                android:id="@+id/JKJK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:text="@string/enter_work_location_text"
                android:textColor="@color/black"
                android:textStyle="bold" />


            <Spinner
                android:id="@+id/enter_work_city"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_below="@+id/JKJK"
                android:backgroundTint="@color/black"
                android:maxLength="200"
                android:maxLines="3"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

        </RelativeLayout>

        <Button
            android:id="@+id/upload_work"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/login_btn"
            android:text="PUT" />

    </RelativeLayout>
</RelativeLayout>